OKD/maistra/gorilla.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gorilla-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gorilla
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: gorilla
        version: v1
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: service
        image: awiradarma/greeting:1.0
        ports:
        - name: service
          containerPort: 7778
---
apiVersion: v1
kind: Service
metadata:
  name: gorilla-v1
spec:
  selector:
    app: gorilla
    version: v1
  ports:
  - name: http
    port: 80
    targetPort: 7778
---
apiVersion: v1
kind: Service
metadata:
  name: gorilla
spec:
  selector:
    app: gorilla
  ports:
  - name: http
    port: 80
    targetPort: 7778
