OKD/maistra/gorilla_dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: 
  name: gorilla-destination-rule
spec:
  host: gorilla
  subsets:
  - name: prod
    labels:
      version: v1
  - name: staging
    labels:
      version: v2
