OKD/maistra/gorilla_vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gorilla-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "sample.com"
    - "*.istio.okd.kebulaman.de"
    - "*.okdcentral1.okd.kebulaman.de"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: ape
  name: gorilla
spec:
  hosts:
  - "sample.com"
  - "ape.istio.okd.kebulaman.de"
  - "ape-staging.istio.okd.kebulaman.de"
  gateways:
  - gorilla-gateway
  http:
  - match:
    - headers:
        Host:
          prefix: ape.istio
      uri:
        prefix: "/ape"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: gorilla
        subset: prod
  - match:
    - headers:
        Host:
          prefix: ape-staging.istio
      uri:
        prefix: "/ape"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: gorilla
        subset: staging
